fixed navbar alignment issues

--- a/App.css
+++ b/App.css
@@ -233,6 +233,7 @@ border-width: .5px;
     display: flex;
     justify-content: center;
     margin-right: 125px;
+    margin-bottom: -12px;
 }
 
 .nav-link {
